--- a/index.html
+++ b/index.html
@@ -14,11 +14,25 @@
       <div class="user">
         <div class="user-box">
           <svg class="wallet"><use xlink:href="./images/icons/wallet.svg#Layer_1"></use></svg><span>$1500.00 </span><svg class="arrow"><use xlink:href="./images/icons/arrow-down.svg#Layer_1"></use></svg>
+        </div>
+        <div class="user-box">
           <svg class="ring-bell"><use xlink:href="./images/icons/notification.svg#Layer_1"></use></svg>
-          <svg class="user-face"><use xlink:href="./images/icons/profile.svg#Layer_1"></use></svg><span class="user-bar-box-text">Leonardo Dicaprio</span>
+        </div>
+        <div class="user-box">
+          <svg class="user-face"><use xlink:href="./images/icons/profile.svg#Layer_1"></use></svg><span class="user-box-text">Leonardo Dicaprio</span>
+        </div>
+        <div class="user-box">
           <svg class="user-door"><use xlink:href="./images/icons/quit.svg#Layer_1"></use></svg>
         </div>
       </div>
     </nav>
+    <section class="content-general">
+      <h2 class="general-title">GENERAL STATISTIC</h2>
+      <div class="data">
+        <input type="text" value="18-11-2020" readonly>
+        <input class="refresher" id="theDate" type="date">
+      </div>
+      <a class="btn btn-refresher"><svg class="refresh"><use xlink:href="./images/icons/refresh.svg#Layer_1"></use></svg></a>
+    </section>
   </div>
 </body>
