Add main structure in html

--- a/index.html
+++ b/index.html
@@ -9,105 +9,15 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="grid">
-    <nav class="top-bar">
-      <div class="user">
-        <div class="user-box">
-          <svg class="wallet"><use xlink:href="./images/icons/wallet.svg#Layer_1"></use></svg><span>$1500.00 </span><svg class="arrow"><use xlink:href="./images/icons/arrow-down.svg#Layer_1"></use></svg>
-        </div>
-        <div class="user-box">
-          <svg class="ring-bell"><use xlink:href="./images/icons/notification.svg#Layer_1"></use></svg>
-        </div>
-        <div class="user-box">
-          <svg class="user-face"><use xlink:href="./images/icons/profile.svg#Layer_1"></use></svg><span class="user-box-text">Leonardo Dicaprio</span>
-        </div>
-        <div class="user-box">
-          <svg class="user-door"><use xlink:href="./images/icons/quit.svg#Layer_1"></use></svg>
-        </div>
-      </div>
-    </nav>
-    <section class="content-general">
-      <h2 class="general-title">GENERAL STATISTIC</h2>
-      <div class="data">
-        <div class="form-data">
-          <input type="text" value="18-11-2020" readonly>
-          <input class="refresher" id="theDate" type="date">
-        </div>
-        <a class="btn btn-refresher"><svg class="refresh"><use xlink:href="./images/icons/refresh.svg#Layer_1"></use></svg></a>
-      </div>
-      <div class="section-wrapper">
-        <div class="section">
-          <div class="section-details">
-            <h3 class="detail-title">Visit signups</h3>
-            <p class="detail">124</p>
-          </div>
-          <div class="section-details">
-            <h3 class="detail-title">FTD</h3>
-            <p class="detail">445</p>
-          </div>
-        </div>
-        <div class="section">
-          <div class="section-details">
-            <h3 class="detail-title">Net deposit</h3>
-            <p class="detail">564</p>
-          </div>
-          <div class="section-details">
-            <h3 class="detail-title">Turn over</h3>
-            <p class="detail">432</p>
-          </div>
-        </div>
-      </div>
-      <div class="chart">
-        <h3>Earnings chart</h3>
-        <canvas id="myChart"></canvas>
-      </div>
-    </section>
-    <aside class="side-mobile">
-      <div class="sidebar-hamburger aside-logo">
-        <h1>Just do it</h1>
-        <a class="icon open"><i class="fa fa-bars"></i></a>
-      </div>
-    </aside>
-    <aside class="sidebar">
-      <div class="aside-logo">
-        <h1>Just do it!</h1>
-        <a class="icon close"><i class="fas fa-bars"></i></a>
-      </div>
-      <div class="title-list">
-        <ul class="title-list-links">
-          <li class="link"><a href="#"><svg class="general"><use xlink:href="./images/icons/general.svg#Layer_1"></use></svg> General</a></li>
-          <li class="link"><a href="#"><svg class="details"><use xlink:href="./images/icons/details.svg#Layer_1"></use></svg> Details</a></li>
-          <li class="link"><a href="#"><svg class="links"><use xlink:href="./images/icons/links.svg#Layer_1"></use></svg>Links</a></li>
-          <li class="link"><a href="#"><svg class="banners"><use xlink:href="./images/icons/banners.svg#Layer_1"></use></svg>Banners</a></li>
-          <li class="link"><a href="#"><svg class="personaldata"><use xlink:href="./images/icons/personaldata.svg#Layer_1"></use></svg>Personal Data</a></li>
-          <li class="link"><a href="#"><svg class="payout"><use xlink:href="./images/icons/payout.svg#Layer_1"></use></svg>Payout</a></li>
-          <li class="link"><a href="#"><svg class="postback"><use xlink:href="./images/icons/postback.svg#Layer_1"></use></svg>Postback</a></li>
-        </ul>
-        <div class="sidebar-manager">
-          <h3>YOUR MANAGER</h3>
-          <div class="manager-wrapper">
-            <div class="avatar-display">
-              <img class="avatar" src="https://images.pexels.com/photos/4783536/pexels-photo-4783536.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="manager">
-              <img class="online" src="http://www.clker.com/cliparts/e/E/F/G/p/g/alex-green-circle-md.png" alt="online">
-            </div>
-            <p>Mikheal E.</p>
-          </div>
-        </div>
-        <div class="user-side">
-          <div class="user-box">
-            <svg class="wallet"><use xlink:href="./images/icons/wallet.svg#Layer_1"></use></svg><span>$1500.00 </span><svg class="arrow"><use xlink:href="./images/icons/arrow-down.svg#Layer_1"></use></svg>
-          </div>
-          <div class="user-box">
-            <svg class="ring-bell"><use xlink:href="./images/icons/notification.svg#Layer_1"></use></svg>
-          </div>
-          <div class="user-box">
-            <svg class="user-face"><use xlink:href="./images/icons/profile.svg#Layer_1"></use></svg><span class="user-box-text">Leonardo Dicaprio</span>
-          </div>
-          <div class="user-box">
-            <svg class="user-door"><use xlink:href="./images/icons/quit.svg#Layer_1"></use></svg>
-          </div>
-        </div>
-      </div>
-    </aside>
-  </div>
+  <section class="top-bar">
+    <div class="container">
+      <ul class="top-menu">
+        <li class="empty-space"></li>
+        <li class="content"></li>
+        <li class="content"></li>
+        <li class="content"></li>
+        <li class="content"></li>
+      </ul>
+    </div>
+  </section>
 </body>
