--- a/index.html
+++ b/index.html
@@ -6,18 +6,37 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Individual</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section class="top-bar">
-    <div class="container">
-      <ul class="top-menu">
-        <li class="empty-space"></li>
-        <li class="content"></li>
-        <li class="content"></li>
-        <li class="content"></li>
-        <li class="content"></li>
+  <section class="main-content row">
+    <div class="side-bar col-md-2">
+      <ul class="side-menu">
+        <li>General</li>
+        <li>Details</li>
+        <li>Links</li>
+        <li>Banners</li>
+        <li>Personal data</li>
+        <li>Payout</li>
+        <li>Postback</li>
       </ul>
+      <div class="content-manager">
+      </div>
+    </div>
+    <div class="main-layout col-md-10">
+      <section class="top-bar">
+        <div class="container">
+          <ul class="top-menu">
+            <li class="empty-space"></li>
+            <li class="menu-content">$ 1,500.00</li>
+            <li class="menu-content">Ring</li>
+            <li class="menu-content">Leonardo Di Caprio</li>
+            <li class="menu-content">Exit</li>
+          </ul>
+        </div>
+      </section>
+      <p>deix</p>
     </div>
   </section>
 </body>
