change styles on site

--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <section class="main-content row">
-    <div class="side-bar col-md-2">
-      <ul class="side-menu">
-        <li>General</li>
-        <li>Details</li>
-        <li>Links</li>
-        <li>Banners</li>
-        <li>Personal data</li>
-        <li>Payout</li>
-        <li>Postback</li>
-      </ul>
+  <section class="main-content">
+    <div class="side-bar">
+      <div class="side-menu">
+        <h3>Just do it!</h3>
+        <a class="active" href="#General">General</a>
+        <a href="#Details">Details</a>
+        <a href="#Links">Links</a>
+        <a href="#Banners">Banners</a>
+        <a href="#Personal-data">Personal data</a>
+        <a href="#Payout">Payout</a>
+        <a href="#Postback">Postback</a>
+      </div>
       <div class="content-manager">
       </div>
     </div>
-    <div class="main-layout col-md-10">
+    <div class="content">
       <section class="top-bar">
-        <div class="container">
-          <ul class="top-menu">
-            <li class="empty-space"></li>
-            <li class="menu-content">$ 1,500.00</li>
-            <li class="menu-content">Ring</li>
-            <li class="menu-content">Leonardo Di Caprio</li>
-            <li class="menu-content">Exit</li>
-          </ul>
+        <div class="topnav">
+          <a class="active" href="#home">Home</a>
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
         </div>
       </section>
       <p>deix</p>
