fix margin in div-content

--- a/index.html
+++ b/index.html
@@ -34,7 +34,38 @@
           <a href="#about">About</a>
         </div>
       </section>
-      <p>deix</p>
+      <section class="general-content">
+        <h5 class="general-title">General statistic</h5>
+        <div class="data">
+          <div class="choose-date">
+            <input type="text" value="25-11-2020" readonly>
+            <input class="refresher" id="theDate" type="date">
+          </div>
+          <a class="btn btn-refresh"><svg class="refresh"><use xlink:href="./images/icons/refresh.svg#Layer_1"></use></svg></a>
+        </div>
+        <div class="statistics">
+          <div class="box-wrapper">
+            <div class="statistics-box">
+              <h6>Visit Signups</h6>
+              <span>124</span>
+            </div>
+            <div class="statistics-box">
+              <h6>FTD</h6>
+              <span>445</span>
+            </div>
+          </div>
+          <div class="box-wrapper">
+            <div class="statistics-box">
+              <h6>Net deposit</h6>
+              <span>564</span>
+            </div>
+            <div class="statistics-box">
+              <h6>Turn over</h6>
+              <span>432</span>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </section>
 </body>
